Added xcworkspace for use by Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: objective-c
 osx_image: xcode8.2
 script:
 - set -o pipefail
-- travis_retry xcodebuild -workspace "JSON to Swift Converter.xcodeproj" -scheme "Convert JSON to Swift"  build-for-testing test | xcpretty
+- travis_retry xcodebuild -workspace "JSON to Swift Converter.xcworkspace" -scheme "JSON to Swift Converter" build-for-testing test | xcpretty
